--- a/examples/css/modern.css
+++ b/examples/css/modern.css
@@ -2,9 +2,43 @@ body {
 	padding-top: 60px;
 }
 
-canvas#mainCanvas {
-	height: 144px;
-	width: 160px;
+.color {
+	/*font-family: fantasy;*/
+	font-variant: small-caps;
+	/*font-weight: bold;*/
+}
+.color i {font-style: normal}
+.color i.p {color: #b80545}
+.color i.u {color: #434579}
+.color i.g {color: #6a804d}
+.color i.y {color: #deb10a}
+.color i.c {color: #009489}
+
+#GameBoy {
+	height: 481px;
+	width: 488px;
+	margin: 0 auto 0;
+	padding: 0;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+#GameBoy .navbar-inner {
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+}
+
+#gfx {
+	box-sizing: border-box;
+	width: 100%;
+	height: 440px;
+	padding: 4px;
+}
+
+canvas {
+	margin: 0 auto 0;
+	width: 100%;
+	height: 100%;
 }
 
 canvas#fullscreen.minimum {
